--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/DesignPanel/DesignPanel.razor
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/DesignPanel/DesignPanel.razor
@@ -1,172 +1,10 @@
-﻿@inject DragDropService DragDropService
-@implements IDisposable
-
-<div class="designpage @Class" style="margin:5px; @Style" 
-    @onclick="OnClick" @ondrop="OnDrop"
-    ondragstart="event.dataTransfer.setData('text', event.target.id);" 
-    @ondrop:stopPropagation @ondragstart:stopPropagation @ondragenter:stopPropagation 
-    @ondragover:preventDefault @ondragover:stopPropagation @ondragleave:stopPropagation @ondragend:stopPropagation>
-
-    @if(ComponentSchemas == null || ComponentSchemas.Count == 0)
-    {
-        
-    }
-    else {
-        @foreach (var component in ComponentSchemas)
-        {
-            if (component.ComponentCategory == ComponentCategory.Basic)
-            {
-                <DropItem Style="@Style" @ref="currentDropItem" ComponentSchema="component"
-              OnItemClick="OnItemClick" OnItemDelete="OnItemDelete" OnItemCopy="OnItemCopy">
-                </DropItem>
-            }
-            else if (component.ComponentCategory == ComponentCategory.Layout)
-            {
-                <DropItem Style="@Style" @ref="currentDropItem" ComponentSchema="component" 
-                    OnItemClick="OnItemClick" OnItemDelete="OnItemDelete" OnItemCopy="OnItemCopy">
-                </DropItem>
-            }
-        }
-    }
+﻿<div class="designpage" style="margin:5px; height:100%; height:100%;">
+    <ComponentContainer ComponentSchemas="@RootComponentSchemas" IsRootContainer="true"></ComponentContainer>
 </div>
 
 @code {
     #region Parameter
     [Parameter]
-    public EventCallback<ComponentSchema> OnItemDrop { get; set; }
-
-    [Parameter]
-    public IList<ComponentSchema> ComponentSchemas { get; set; } = new List<ComponentSchema>();
-
-    [Parameter]
-    public Action OnDragDropZoneClick { get; set; }
-
-    [Parameter]
-    public string Class { get; set; }
-
-    [Parameter]
-    public string Style { get; set; }
-    #endregion
-
-    private DropItem currentDropItem { get; set; }
-
-    #region Event
-    protected override void OnInitialized()
-    {
-        RegisterEventDispatcher();
-
-        base.OnInitialized();
-    }
-
-    private void OnDrop()
-    {
-        var currentDragComponent = DragDropService.CurrentDragComponent;
-
-        //源拖拽区才新增，目标拖拽区只移动
-        DragDropService.DropItem_DragEnd();
-
-        if (currentDragComponent.IsDroppedFromComponentPanel == false)
-        {
-            DragDropService.DragItem_Add(ComponentSchemas, currentDragComponent);
-        }
-        else
-        {
-            DropItemSorting(DragDropService.LastDragOverComponent, currentDragComponent);
-        }
-
-        StateHasChanged();
-        OnItemDrop.InvokeAsync(currentDragComponent);
-    }
-
-    private void OnClick()
-    {
-        BlazorEventDispatcher.Trigger("designerengine.dropitem.onblur", null);
-    }
-
-    private void OnItemClick(ComponentSchema componentSchema)
-    {
-        //取消上一个选中，设置当前选中项
-        if (DragDropService.LastSelectedComponent != null)
-            DragDropService.LastSelectedComponent.IsSelected = false;
-
-        componentSchema.IsSelected = true;
-        DragDropService.LastSelectedComponent = componentSchema;
-
-        StateHasChanged();
-    }
-
-    private void OnItemDelete(ComponentSchema componentSchema)
-    {
-        //将下一个设为选中
-        int index = ComponentSchemas.IndexOf(componentSchema);
-        if (ComponentSchemas.Count > 1)
-        {
-            int next = index + 1 >= ComponentSchemas.Count ? index -1 : index + 1;
-            ComponentSchemas[next].IsSelected = true;
-            DragDropService.LastSelectedComponent = ComponentSchemas[next];
-        }
-        ComponentSchemas.Remove(componentSchema);
-        StateHasChanged();
-    }
-
-    private void OnItemCopy(ComponentSchema componentSchema)
-    {
-        componentSchema.IsSelected = false;
-        DragDropService.DragItem_Add(ComponentSchemas, componentSchema, true);
-        StateHasChanged();
-    }
-    #endregion
-
-    #region
-    private void RegisterEventDispatcher()
-    {
-        //订阅左侧组件面板中的组件点击事件
-        BlazorEventDispatcher.RegisterEvent("designerengine.dragitem.onclick", (value) =>
-        {
-            DragDropService.DragItem_Add(ComponentSchemas, (ComponentSchema)value);
-            StateHasChanged();
-        });
-
-        //订阅设计面板取消选中事件
-        BlazorEventDispatcher.RegisterEvent("designerengine.dropitem.onblur", (value) =>
-        {
-        //取消选中项
-        if (DragDropService.LastSelectedComponent != null)
-                DragDropService.LastSelectedComponent.IsSelected = false;
-            StateHasChanged();
-        });
-    }
-
-    /// <summary>
-    /// 排序
-    /// </summary>
-    /// <param name="dragOverComponent"></param>
-    /// <param name="currentDragComponent"></param>
-    private void DropItemSorting(ComponentSchema dragOverComponent, ComponentSchema currentDragComponent)
-    {
-        if (dragOverComponent == null)
-            return;
-
-        if (currentDragComponent == DragDropService.LastDragOverComponent)
-            return;
-
-        var indexDraggedOverItem = ComponentSchemas.IndexOf(dragOverComponent);
-        if (dragOverComponent.IsDroppedToBack == false)
-            indexDraggedOverItem -= 1;
-
-        if (indexDraggedOverItem < 0)
-            indexDraggedOverItem = 0;
-        if (indexDraggedOverItem > ComponentSchemas.Count)
-            indexDraggedOverItem = ComponentSchemas.Count - 1;
-
-        //先移除，再插入对应位置
-        ComponentSchemas.Remove(currentDragComponent);
-        ComponentSchemas.Insert(indexDraggedOverItem, currentDragComponent);
-    }
-
-    public void Dispose()
-    {
-        DragDropService.Reset();
-    }
+    public IList<ComponentSchema> RootComponentSchemas { get; set; } = new List<ComponentSchema>();
     #endregion
 }
