--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/DesignPanel/DropItem.razor.css
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/DesignPanel/DropItem.razor.css
@@ -1,36 +1,9 @@
-﻿/*
- * 命名规则：{组件名称}-{元素名称}
-**/
-
-.designpage {
-    height: 100%;
-    /*overflow: auto;*/
-}
-
-/* ================== DragItem.razor ==================== */
-.dragitem {
-    float: left;
-    width: 6.8rem;
-    height: 2.2rem;
-    margin: 4px;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #333;
-    background-color: #f5f7fa;
-}
-
-    .dragitem:hover {
-        border: #409eff dashed 1px;
-        color: #409eff;
-    }
-
-/* ================== DropItem.razor ==================== */
+﻿/* ================== DropItem.razor ==================== */
 .dropitem-box {
     height: 85px;
     border: #f0f2f5 solid 2px;
 }
+
 .dropitem {
     position: relative;
     display: flex;
@@ -96,20 +69,6 @@
     padding: 0 4px;
 }
 
-.dropitem-pointer:hover {
-    cursor: pointer;
-}
-
-
-/* ====================== ComponentProperty.razor ========================== */
-.componentproperty-item {
-    margin: 5px 15px 20px 10px;
-}
-
-
-
-/* ====================== PageProperty.razor ========================== */
-.pageproperty-item {
-    margin: 5px 15px 20px 10px;
-}
-
+    .dropitem-pointer:hover {
+        cursor: pointer;
+    }
