--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/SettingPanel/ActionSetting.razor
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/SettingPanel/ActionSetting.razor
@@ -14,6 +14,6 @@
 
     private void OnPropertyChange()
     {
-        BlazorEventDispatcher.Trigger("designerengine.eventproperty.onchange", null);
+        BlazorEventDispatcher.Trigger("designengine.actionsetting.onchange", null);
     }
 }
