--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/SettingPanel/PageSetting.razor
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/SettingPanel/PageSetting.razor
@@ -1,4 +1,4 @@
-﻿<div class="pageproperty-item">
+﻿<div class="pagesetting-item">
     <label>布局：</label>
     <RadioGroup TValue="int">
         <Radio RadioButton Value="0">一列</Radio>
