--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/SettingPanel/StyleSetting.razor
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/SettingPanel/StyleSetting.razor
@@ -14,6 +14,6 @@
 
     private void OnPropertyChange()
     {
-        BlazorEventDispatcher.Trigger("designerengine.styleproperty.onchange", null);
+        BlazorEventDispatcher.Trigger("designengine.stylesetting.onchange", null);
     }
 }
