--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/ComponentPanel/ComponentPanel.razor
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/ComponentPanel/ComponentPanel.razor
@@ -10,7 +10,7 @@
                 <div style="border-left: 5px solid #d0d4da;padding: 0 0 0 8px; margin:5px 0;">@componentProvider.Title</div>
                 @foreach (var component in componentProvider.LoadComponent())
                 {
-                    <DragItem ComponentSchema="component" OnItemDragStart="OnItemDragStart"></DragItem>
+                    <DragItem ComponentSchema="component"></DragItem>
                 }
             </div>
         }
@@ -19,12 +19,3 @@
         
     </TabPane>
 </Tabs>
-
-@code {
-
-    public void OnItemDragStart(ComponentSchema componentSchema)
-    {
-        //设置当前拖拽项
-        DragDropService.CurrentDragComponent = componentSchema;
-    }
-}
